# commensurability

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: doctests.yml  full_tests.yml  partial_tests.yml  release.yml  tests.yml
docs/: .gitignore  contributing.md  gen_ref_pages.py  index.md  installation.md  motivation.md  quickstart.md  requirements.txt
docs/about/: algorithm.md  index.md  motivation.md  usage.md
docs/analysis/: quickstart.md  viewer.md
docs/stylesheets/: extra.css
docs/tessellation/: Rz_convexhull.hdf5  ar0.hdf5  ar10.hdf5  ar15.hdf5  ar20.hdf5  ar5.hdf5  convexhull.hdf5  convexhull_rot4.hdf5  cylinder.hdf5  implementation.md  implementation_ar_test.py  implementation_norm_test.py  index.md  sphere.hdf5
docs/tessellation/usage/: index.md  quickstart.md
docs/tessellation/usage/analysis/: rotating_bar.md  rotating_bar_bar.hdf5  rotating_bar_big_bar.hdf5  rotating_bar_no_bar.hdf5  rotating_bar_test.py  solar_neighborhood.hdf5  solar_neighborhood.md  solar_neighborhood_test.py
docs/tessellation/usage/tessellation/: multiprocessing.md  mw_orbit.md  pidgey.md
docs/user/: index.md  introduction.md
docs/user/tutorials/: mw_orbit.md  pidgey.md
examples/: find_commensurabilities.py  search_2d.py  using_galpy.py  utils.py
examples/demo/: 1-mwe.py  2-tess.py  3-rng.py  4-phase.py  4-read.py  5-saved.py  6-iplot.py  7-coords.py  8-backends.py  9-analysis.py
examples/outdated_scripts/cleanup/: back.py  clean.py  coords.py  grid.py  multiple_orbit_integration.py  rewrite.py  simple.py  write.py
examples/outdated_scripts/using_gala/: monte_carlo.py  read.py  using_gala.py
examples/outdated_scripts/using_galpy/: interactive_plot.py  mproc_timestep.py  orbit_families.py  phase_space_2d.py  rotbar.py  timestep.py  utils.py
examples/outdated_scripts/using_galpy/3d/: convex_hull.py  frames.py  image.py  interactive.py
examples/outdated_scripts/using_galpy/axis ratio/: frames.py  image.py  interactive.py
examples/outdated_scripts/using_galpy/bar/: frames.py  interactive.py
examples/outdated_scripts/using_galpy/complexity/: tess3d.py
examples/outdated_scripts/using_galpy/full_phase/: mc.py
examples/outdated_scripts/using_galpy/int params/: interactive.py
examples/outdated_scripts/using_galpy/monte carlo/: interactive.py  mc_3d.py  monte_carlo.py
examples/outdated_scripts/using_galpy/rotation/: frames.py  interactive.py
examples/using_agama/: rotating_bar.py
examples/using_gala/: environment.yml  gala_env.yml  random_mw_orbit.py  rotating_bar.py
examples/using_galpy/: 2d.py  environment.yml  example.py  galpy_env.yml  phase.py  phase_slice.py  random_mw_orbit.py  read.py  rotating_bar.py  single_image.py  tesst.py  testing.py
paper/: README.md  paper.bib  paper.md
paper/figures/: joss-7009.preprint.tex
src/commensurability/: __init__.py  analysis.py  base.py  evaluation.py  interactive.py  tessellation_analysis.py  utils.py  viewer.py
src/commensurability/analysis/: __init__.py  analysis.py  backends.py  coordinates.py  coordinates_old.py  fileio.py  importextension.py  interactive.py
src/commensurability/analysis/backend/: __init__.py  base.py  using_agama.py  using_gala.py  using_galpy.py
src/commensurability/analysis/coordinates/: __init__.py  base.py  dim2.py  dim3.py
src/commensurability/analysis/persistence/: meta.py  serialization.py
src/commensurability/tessellation/: __init__.py  base.py  constructor.py  dim2.py  dim3.py  exceptions.py  generic.py
tests/: test_analysis.py  test_evaluation.py  test_tessellation.py  test_utils.py  test_viewer.py
tests/tessellation/: test_constructor.py  test_dim3.py  test_generic.py  test_tessellation.py
