[metadata]
name = commensurability
version = 0.0.1

[options]
packages = 
    commensurability
install_requires =
    astropy
    matplotlib
    numpy
    scipy
    tqdm
python_requires = >=3.8
package_dir =
    src
zip_safe = no

[flake8]
count = True
max-line-length = 120
per-file-ignores = 
    __init__.py:F401
    analysis.py:E999
    interactive.py:E999
    fileio.py:F401
    using_*.py:F401

[mypy]
ignore_missing_imports = True